fixing the overflow probleme for mobile devices

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,5 +1,7 @@
 .Main {
     height: 100%;
+    position: relative;
+    overflow: hidden;
 }
 
 .bigContainer {
