--- a/src/index.css
+++ b/src/index.css
@@ -18,26 +18,7 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: overlay;
-}
-
-body::-webkit-scrollbar-track
-{
-	/* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
-	background-color: #ff000000;
-}
-
-body::-webkit-scrollbar
-{
-	width: 10px;
-	background-color: #00000013;
-}
-
-body::-webkit-scrollbar-thumb
-{
-	background-color: #79797975;
-	/* border: 1px solid #7c7c7c; */
-  border-radius: 10px;
+  overflow: auto;
 }
 
 #root {
@@ -46,4 +27,23 @@ body::-webkit-scrollbar-thumb
 
 .App {
   height: 100%;
+}
+
+body::-webkit-scrollbar-track
+{
+  /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
+  background-color: #ff000000;
+}
+
+body::-webkit-scrollbar
+{
+  width: 10px;
+  background-color: #00000013;
+}
+
+body::-webkit-scrollbar-thumb
+{
+  background-color: #79797975;
+  /* border: 1px solid #7c7c7c; */
+  border-radius: 10px;
 }
